# example_cpp_java_and_cpp_swift_bridge

./: .gitignore  CMakeLists.txt  README.md  mapbox_gl_test
binding/java/: MapboxCallback.java  MapboxJNI.java
binding/mapboxswift/: Package.swift
binding/mapboxswift/Sources/example/: main.swift
binding/mapboxswift/Sources/mapboxswift/: mapboxswift.cpp
binding/mapboxswift/Sources/mapboxswift/include/: mapboxswift.h
example/: main.cpp
mapgl/: map.cpp  map.hpp
mapgl/include/: map.h  mapbox_java.h
mapgl/src/: map.cpp  map.hpp  mapbox_java.cpp
mapgl/test/: main.cpp
